Refactor front ng to app with no war file