@@ -2,6 +2,8 @@ package org.opensilex.dev;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+
 import org.opensilex.OpenSilex;
 import org.opensilex.cli.MainCommand;
 
@@ -18,39 +20,45 @@ public class StartServer {
 
     public static void main(String[] args) throws IOException {
 
-        Path currentDirectory = Path.of(System.getProperty("user.dir"));
+        Path currentDirectory = Paths.get(System.getProperty("user.dir"));
 
         ProcessBuilder sharedBuilder = new ProcessBuilder(
                 currentDirectory.resolve("../.ng/node/node").toFile().getCanonicalPath(),
-                currentDirectory.resolve("../opensilex-front-ng/angular/dev-tools/build-shared.js").toFile().getCanonicalPath()
-        );
-        sharedBuilder.directory(currentDirectory.resolve("../opensilex-front-ng/angular/dev-tools").toFile());
+                currentDirectory.resolve("../opensilex-front-app/angular/dev-tools/build-shared.js").toFile()
+                        .getCanonicalPath());
+        sharedBuilder.directory(currentDirectory.resolve("../opensilex-front-app/angular/dev-tools").toFile());
         sharedBuilder.inheritIO();
-        sharedBuilder.start();
+        Process sharedBuilderProcess = sharedBuilder.start();
 
         ProcessBuilder pluginBuilder = new ProcessBuilder(
                 currentDirectory.resolve("../.ng/node/node").toFile().getCanonicalPath(),
-                currentDirectory.resolve("../opensilex-front-ng/angular/dev-tools/build-plugins.js").toFile().getCanonicalPath(),
-                "--module=opensilex-front-ue"
-        );
-        pluginBuilder.directory(currentDirectory.resolve("../opensilex-front-ng/angular/dev-tools").toFile());
+                currentDirectory.resolve("../opensilex-front-app/angular/dev-tools/build-plugins.js").toFile()
+                        .getCanonicalPath(),
+                "--module=opensilex-front-ue");
+        pluginBuilder.directory(currentDirectory.resolve("../opensilex-front-app/angular/dev-tools").toFile());
         pluginBuilder.inheritIO();
-        pluginBuilder.start();
+        Process pluginBuilderProcess = pluginBuilder.start();
 
         ProcessBuilder devServer = new ProcessBuilder(
                 currentDirectory.resolve("../.ng/node/node").toFile().getCanonicalPath(),
-                currentDirectory.resolve("../node_modules/.bin/ng").toFile().getCanonicalPath(),
-                "serve",
-                "--poll=2000"
-        );
-        devServer.directory(currentDirectory.resolve("../opensilex-front-ng/angular").toFile());
+                currentDirectory.resolve("../node_modules/.bin/ng").toFile().getCanonicalPath(), "serve",
+                "--poll=2000");
+        devServer.directory(currentDirectory.resolve("../opensilex-front-app/angular").toFile());
         devServer.inheritIO();
-        devServer.start();
+        Process devServerProcess = devServer.start();
 
-        MainCommand.main(new String[]{
-            "server",
-            "start",
-            "--" + OpenSilex.PROFILE_ID_ARG_KEY + "=" + OpenSilex.DEV_PROFILE_ID
+        Runtime.getRuntime().addShutdownHook(new Thread() {
+            public void run() {
+                sharedBuilderProcess.destroyForcibly();
+                pluginBuilderProcess.destroyForcibly();
+                devServerProcess.destroyForcibly();
+            }
         });
+        
+        String classpathStr = System.getProperty("java.class.path");
+        System.out.print(classpathStr);
+        MainCommand.main(new String[]{"server", "start",
+            "--" + OpenSilex.PROFILE_ID_ARG_KEY + "=" + OpenSilex.DEV_PROFILE_ID});
+
     }
 }
